<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGroundColor"
    tools:context=".view.identity.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="173dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:gravity="center"
            android:text="@string/profile_p"
            android:textColor="#000000"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/MainProfileImagwView"
            android:layout_width="169dp"
            android:layout_height="119dp"
            android:layout_gravity="center|center_horizontal"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_supervised_user_circle_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:text="@string/FirstName"
            android:textColor="#000000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/firstNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/cardBackGroundColor"
            android:ems="10"
            android:foregroundGravity="center_vertical"
            android:hint="@string/FirstName"
            android:inputType="textEmailAddress"
            android:textSize="36dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:text="@string/lastName"
            android:textColor="#000000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/ProfilelastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/cardBackGroundColor"
            android:ems="10"
            android:foregroundGravity="center_vertical"
            android:hint="@string/lastName"
            android:inputType="textEmailAddress"
            android:textSize="36dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:text="@string/Age"
            android:textColor="#000000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/ageProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/cardBackGroundColor"
            android:ems="10"
            android:foregroundGravity="center_vertical"
            android:hint="@string/your_age"
            android:inputType="textEmailAddress"
            android:textSize="36dp" />

        <TextView
            android:id="@+id/genderProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:text="@string/Gender"
            android:textColor="#000000"
            android:textSize="30dp" />

        <RadioGroup
            android:id="@+id/genderRadioGroupInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="left"
                android:text="@string/Female" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

            </LinearLayout>

        </RadioGroup>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/abel"
            android:text="@string/Occupation"
            android:textColor="#000000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/occupationEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/cardBackGroundColor"
            android:ems="10"
            android:foregroundGravity="center_vertical"
            android:hint="@string/Occupation"
            android:inputType="textEmailAddress"
            android:textSize="36dp" />

        <Button
            android:id="@+id/saveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/input2tColor"
            android:text="@string/Save"
            android:textSize="35dp"
            app:cornerRadius="25dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:gravity="center_horizontal"
            android:text="@string/Register"
            android:textColor="#000000"
            android:textSize="40dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>