<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Selection.reportCovidCases.ReportCovidCasesFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/identificationType"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinnerIdType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/mainSelectColor"
            android:backgroundTintMode="screen"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/identityValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/identification"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/NumberOfCases"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinnerNumberOfCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainSelectColor"
            android:backgroundTintMode="screen"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Relationship_"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinnerRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/mainSelectColor"
            android:backgroundTintMode="screen"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_checking_acknowledgement" />

        <Button
            android:id="@+id/saveRport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/categoriesSelectionColor"
            android:baselineAligned="false"
            android:text="@string/Report"
            app:rippleColor="@color/cardBackGroundColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>