<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp"
        tools:context=".view.Selection.countries.CountriesFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/AsiaButton"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/Asia"
                    android:textSize="24dp" />

                <ImageView
                    android:id="@+id/europButton"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/auPopulationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/Europ"
                    android:textSize="24dp" />

                <ImageView
                    android:id="@+id/AuButton"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/australia"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/africaButton"
                    android:layout_width="229dp"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/auCountryInfo"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/Africa"
                    android:textSize="24dp" />

                <ImageView
                    android:id="@+id/nUSAButton"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/auContinentInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/North_USA"
                    android:textSize="24dp" />

                <ImageView
                    android:id="@+id/SUSAButton"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/South_USA"
                    android:textSize="24dp" />
            </LinearLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginBottom="52dp"
        android:layout_weight="0"
        android:text="@string/For_daily_cases"
        android:textColor="#BA1818"
        android:textSize="17dp" />

</RelativeLayout>