<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGroundColor"
    tools:context=".view.identity.LoginFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ProfileFirstName"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/cardBackGroundColor"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textEmailAddress"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ProfileLastName"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/cardBackGroundColor"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textEmailAddress"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileFirstName" />

    <EditText
        android:id="@+id/ProfileBio"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/cardBackGroundColor"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="5"
        android:singleLine="false"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileLastName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/input2tColor"
        android:text="@string/Register"
        android:textSize="45dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileBio" />


</androidx.constraintlayout.widget.ConstraintLayout>